[package]
name = "todays-muscle-training"
version = "1.0.0"
edition = "2021"
authors = ["block <block.cube.lib@gmail.com>"]

[dependencies]
getrandom = { version = "0.2.5", features = ["js"] }
gloo = "0.6.0"
gloo-storage = "0.2.0"
js-sys = "0.3.56"
log = "0.4.14"
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
toml = "0.5.8"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = "0.3.56"
yew = "0.19.3"
